// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-compute - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Azure compute skill that routes to specialized sub-skills for VM and VMSS guidance. USE FOR: recommend VM size, which VM should I use, choose Azure VM, VM for web/database/ML/batch/HPC, GPU VM, compare VM sizes, cheapest VM, best VM for workload, VM pricing, cost estimate, burstable/compute/memory/storage optimized VM, confidential computing, VM trade-offs, VM families, VMSS, scale set recommendation, autoscale VMs, load balanced VMs, VMSS vs VM, scale out, horizontal scaling, flexible orchestration. DO NOT USE FOR: deploying VMs or VMSS (use azure-deploy), managing existing VMs (use azure-resource-lookup), cost optimization of running VMs (use azure-cost-optimization), non-VM services like App Service or AKS.",
  "extractedKeywords": [
    "autoscale",
    "azure",
    "azure-cost-optimization",
    "azure-deploy",
    "azure-resource-lookup",
    "balanced",
    "batch",
    "best",
    "burstable",
    "cheapest",
    "choose",
    "compare",
    "compute",
    "computing",
    "confidential",
    "cost",
    "database",
    "deploying",
    "estimate",
    "existing",
    "families",
    "flexible",
    "guidance",
    "horizontal",
    "like",
    "load",
    "managing",
    "memory",
    "non-vm",
    "optimization",
    "optimized",
    "orchestration",
    "pricing",
    "recommend",
    "recommendation",
    "routes",
    "running",
    "scale",
    "scaling",
    "service",
    "services",
    "should",
    "size",
    "sizes",
    "skill",
    "specialized",
    "storage",
    "sub-skills",
    "that",
    "trade-offs",
    "validation",
    "vmss",
    "which",
    "workload",
  ],
  "name": "azure-compute",
}
`;

exports[`azure-compute - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "autoscale",
  "azure",
  "azure-cost-optimization",
  "azure-deploy",
  "azure-resource-lookup",
  "balanced",
  "batch",
  "best",
  "burstable",
  "cheapest",
  "choose",
  "compare",
  "compute",
  "computing",
  "confidential",
  "cost",
  "database",
  "deploying",
  "estimate",
  "existing",
  "families",
  "flexible",
  "guidance",
  "horizontal",
  "like",
  "load",
  "managing",
  "memory",
  "non-vm",
  "optimization",
  "optimized",
  "orchestration",
  "pricing",
  "recommend",
  "recommendation",
  "routes",
  "running",
  "scale",
  "scaling",
  "service",
  "services",
  "should",
  "size",
  "sizes",
  "skill",
  "specialized",
  "storage",
  "sub-skills",
  "that",
  "trade-offs",
  "validation",
  "vmss",
  "which",
  "workload",
]
`;
